--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 .DS_Store
 ._*
-
-# Don't actually commit full ROMs
-wanwan*.bin
-
-# LoopyMSE outputs
-*.sav
-print_*.bmp
-loopymse_*.bmp
+__pycache__/
